inserción de datos

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CV - Nombre Apellido</title>
+    <title>CV - David Rubio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header class="header">
         <div class="container">
-            <img src="foto.jpg" alt="Foto de perfil" class="profile-img">
-            <h1>Nombre Apellido</h1>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTW9qJDBj6_zjUtToGk5K_t71b9DG9RbGspLHlaCwAU7g8GNHteXpMJYMGBPXw&s" alt="Foto de perfil" class="profile-img">
+            <h1>David Rubio</h1>
             <p class="subtitle">Desarrollo de Aplicaciones Web</p>
-            <p>Email: correo@ejemplo.com | Tel: 600 000 000 | Portfolio GitHub: ... </p>
+            <p>Email: <a href="davidrubiosoteras@gmail.com" style="color:white">davidrubiosoteras@gmail.com</a> | Tel: 600 000 000 | Portfolio GitHub: <a href="https://github.com/drubio-itaca" style="color:white">https://github.com/drubio-itaca</a> </p>
         </div>
     </header>
 
@@ -21,7 +21,10 @@
         <section>
             <h2>Perfil Profesional</h2>
             <p>
-                Estudiante de...Intereses...Motivaciones...Que es lo que buscas...
+                Estudiante de aplicaciones Web
+                <br>Intereses: dinero
+                <br>Motivaciones: dinero
+                <br>Que es lo que buscas: la felicidad
             </p>
         </section>
 
@@ -29,9 +32,9 @@
             <h2>Formación</h2>
             <div class="item">
                 <h3>Grado Superior en Desarrollo de Aplicaciones Web</h3>
-                <span>IES Itaca (2024 - 2026)</span>
-                <h3>Indica más estudios</h3>
-                <span>IES Ejemplo (202X - 202X)</span>
+                <span>IES Itaca (2025 - 2027)</span>
+                <h3>Grado Superior en Programación de la producción por moldeo de metales y polímeros</h3>
+                <span>IES Virgen del Pilar (2023 - 2025)</span>
             </div>
         </section>
 
@@ -41,8 +44,8 @@
                 <h3>Proyecto Web Personal</h3>
                 <span>2025</span>
                 <p>Desarrollo de una página web responsive utilizando HTML, CSS y publicación en GitHub</p>
-                <h3>Indica tu experiencia laboral</h3>
-                <span>202X</span>
+                <h3>ICS consultores - Topografía</h3>
+                <span>2024-2025</span>
                 <p>Indica tu experiencia laboral, si no tienes puedes indicar algún proyecto</p>
             </div>
         </section>
@@ -53,7 +56,9 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Git</li>
-                <li>Otros...</li>
+                <li>SQL</li>
+                <li>JAVA</li>
+                <li>AUTOCAD</li>
             </ul>
         </section>
 
@@ -61,14 +66,14 @@
             <h2>Idiomas</h2>
             <ul>
                 <li>Español - Nativo</li>
-                <li>Añade más idiomas</li>
+                <li>Inglés - Alto</li>
             </ul>
         </section>
 
     </main>
 
     <footer>
-        <p>© 2026 Nombre Apellido - CV Online</p>
+        <p>© 2026 David Rubio - CV Online</p>
     </footer>
 
 </body>
